--- a/challenges.html
+++ b/challenges.html
@@ -87,10 +87,10 @@
             <h1>Completed Challenges</h1>
             <div class="row">
               <div class="col-md-3">
-                <div class="card">
+                <div class="card complete-card">
                   <img class="card-img-top" src="" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Future Challenge 1</h5>
+                    <h5 class="card-title">Completed Challenge 1</h5>
                     <p class="card-text">Short explanation of challenge</p>
                     <a href="#" class="btn btn-primary">Go to challenge</a>
                   </div>
@@ -101,7 +101,7 @@
             <h1>Future Challenges</h1>
             <div class="row">
               <div class="col-md-3">
-                <div class="card">
+                <div class="card future-card">
                   <img class="card-img-top" src="" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Future Challenge 1</h5>
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="col-md-3">
-                <div class="card">
+                <div class="card future-card">
                   <img class="card-img-top" src="" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Future Challenge 2</h5>
