--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
           <h1 class="page-head">My Portfolio</h1>
           <div class="row">
             <div class="col-md-4">
-              <div class="card">
+              <div class="card portfolio-card">
                 <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
@@ -51,7 +51,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card">
+              <div class="card portfolio-card">
                 <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
@@ -60,9 +60,9 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 portfolio-card">
               <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                <img class="card-img-top" src="sorok-processing.JPG" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
                   <p class="card-text">Short explanation of project</p>
@@ -73,8 +73,8 @@
           </div>
           <div class="row">
             <div class="col-md-4">
-              <div class="card">
-                <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+              <div class="card portfolio-card">
+                <img class="card-img-top" src="sorok_leaflet.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Project title</h5>
                   <p class="card-text">Short explanation of project</p>
@@ -83,7 +83,5 @@
               </div>
             </div>
         </div>
-
-
     </body>
 </html>
