--- a/challenges.html
+++ b/challenges.html
@@ -84,39 +84,43 @@
               </div>
             </div>
             <!-- row for past challenges  -->
-            <h1>Completed Challenges</h1>
             <div class="row">
-              <div class="col-md-3">
-                <div class="card complete-card">
-                  <img class="card-img-top" src="" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Completed Challenge 1</h5>
-                    <p class="card-text">Short explanation of challenge</p>
-                    <a href="#" class="btn btn-primary">Go to challenge</a>
+              <h1>Completed Challenges</h1>
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="card complete-card">
+                    <img class="card-img-top" src="" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Completed Challenge 1</h5>
+                      <p class="card-text">Short explanation of challenge</p>
+                      <a href="#" class="btn btn-primary">Go to challenge</a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
             <!-- row for future challenges: displayed by cards-->
-            <h1>Future Challenges</h1>
             <div class="row">
-              <div class="col-md-3">
-                <div class="card future-card">
-                  <img class="card-img-top" src="" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Future Challenge 1</h5>
-                    <p class="card-text">Short explanation of challenge</p>
-                    <a href="#" class="btn btn-primary">Go to challenge</a>
+              <h1>Future Challenges</h1>
+              <div class="row">
+                <div class="col-md-3">
+                  <div class="card future-card">
+                    <img class="card-img-top" src="" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Future Challenge 1</h5>
+                      <p class="card-text">Short explanation of challenge</p>
+                      <a href="#" class="btn btn-primary">Go to challenge</a>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-3">
-                <div class="card future-card">
-                  <img class="card-img-top" src="" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Future Challenge 2</h5>
-                    <p class="card-text">Short explanation of chellenge</p>
-                    <a href="#" class="btn btn-primary">Go to challenge</a>
+                <div class="col-md-3">
+                  <div class="card future-card">
+                    <img class="card-img-top" src="" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Future Challenge 2</h5>
+                      <p class="card-text">Short explanation of chellenge</p>
+                      <a href="#" class="btn btn-primary">Go to challenge</a>
+                    </div>
                   </div>
                 </div>
               </div>
