--- a/challenges.html
+++ b/challenges.html
@@ -51,24 +51,33 @@
                 <!-- Content for the carousel -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/cs50_image.PNG" alt="First slide">
+                    <img class="d-block w-100 img-fluid" src="images/cs50_image.PNG" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Harvard CS50</h5>
-                      <p>  </p>
+                      <p>Almost Done!</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="" alt="Second slide">
+                    <img class="d-block w-100 img-fluid" src="images/web.PNG" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5> </h5>
-                      <p>  </p>
+                      <h5>Web Development CS50</h5>
+                      <p>Just Got Warming Up!</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 17%" aria-valuenow="17" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="" alt="Third slide">
+                    <img class="d-block w-100 img-fluid" src="images/photoshop.PNG" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5> </h5>
-                      <p>  </p>
+                      <h5>Photoshop Composition</h5>
+                      <p>Just Got Warming Up!</p>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
