--- a/challenges.html
+++ b/challenges.html
@@ -51,7 +51,7 @@
                 <!-- Content for the carousel -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100 img-fluid" src="images/cs50_image.PNG" alt="First slide">
+                    <img class="d-block h-100" src="images/cs50_image.PNG" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Harvard CS50</h5>
                       <p>Almost Done!</p>
@@ -61,7 +61,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid" src="images/web.PNG" alt="Second slide">
+                    <img class="d-block h-100" src="images/web.PNG" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Web Development CS50</h5>
                       <p>Just Got Warming Up!</p>
@@ -71,7 +71,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid" src="images/photoshop.PNG" alt="Third slide">
+                    <img class="d-block h-100" src="images/photoshop.PNG" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Photoshop Composition</h5>
                       <p>Just Got Warming Up!</p>
