--- a/challenges.html
+++ b/challenges.html
@@ -43,7 +43,7 @@
             <div class="row text-center" id="slide-row">
               <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <!-- Create indicators for the slides of the carousel -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators mx-auto">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -61,7 +61,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block slide-img mx-auto" src="images/web.PNG" alt="Second slide">
+                    <img class="d-block slide-img" src="images/web.PNG" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Web Development CS50</h5>
                       <p>Just Got Warming Up!</p>
@@ -71,7 +71,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block slide-img mx-auto" src="images/photoshop.PNG" alt="Third slide">
+                    <img class="d-block slide-img" src="images/photoshop.PNG" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Photoshop Composition</h5>
                       <p>Just Got Warming Up!</p>
