--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <body>
         <!-- navigation bar at the top of the page -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">Jiwoon Kim</a>
+            <a class="navbar-brand" href="about.html">Jiwoon Kim</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
